// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hyperlink /> with element prop 1`] = `
.c0 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 0;
  text-decoration: underline;
  margin-bottom: 0;
  font-size: 18px;
  line-height: 1.12;
}

<Hyperlink
  color="black"
  element="span"
  size="regular"
  spacing="none"
>
  <TextPrimitive
    color="black"
    element="span"
    size="regular"
    spacing="none"
    underline={true}
    variant="p"
    weight="regular"
  >
    <Styled(Primitive)
      color="black"
      element="span"
      size="regular"
      spacing="none"
      underline={true}
      weight="regular"
    >
      <Primitive
        className="c0"
        color="black"
        element="span"
        size="regular"
        spacing="none"
        underline={true}
        weight="regular"
      >
        <span
          className="c0"
        >
          Small size
        </span>
      </Primitive>
    </Styled(Primitive)>
  </TextPrimitive>
</Hyperlink>
`;

exports[`<Hyperlink /> with initial props 1`] = `
.c0 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 0;
  text-decoration: underline;
  margin-bottom: 0;
  font-size: 18px;
  line-height: 1.12;
}

<Hyperlink
  color="black"
  element="p"
  size="regular"
  spacing="none"
>
  <TextPrimitive
    color="black"
    element="p"
    size="regular"
    spacing="none"
    underline={true}
    variant="p"
    weight="regular"
  >
    <Styled(Primitive)
      color="black"
      element="p"
      size="regular"
      spacing="none"
      underline={true}
      weight="regular"
    >
      <Primitive
        className="c0"
        color="black"
        element="p"
        size="regular"
        spacing="none"
        underline={true}
        weight="regular"
      >
        <p
          className="c0"
        >
          Regular size
        </p>
      </Primitive>
    </Styled(Primitive)>
  </TextPrimitive>
</Hyperlink>
`;
